Change background color from darkblue to darkgreen

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2{
     
     font-size: 10px;
     text-transform: uppercase;
-    background:darkblue;
+    background:darkgreen;
 
     letter-spacing: 2px;
 }
